Fix misalignment in error panel

--- a/src/client/flogo/flow/error-panel/error-panel.component.less
+++ b/src/client/flogo/flow/error-panel/error-panel.component.less
@@ -103,7 +103,7 @@
 }
 
 .error-panel__content {
-  min-height: 144px;
+  min-height: 140px;
   display: flex;
 }
 
