--- a/src/client/flogo/flow/flow.component.less
+++ b/src/client/flogo/flow/flow.component.less
@@ -190,7 +190,7 @@
 
 .error-panel__icon-container {
   width: @error-panel-icon__width;
-  height: 155px;
+  height: 140px;
   position: absolute;
   margin-left: @error-panel-icon__width;
   z-index: 2;
